--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "idb": "^8.0.3",
+    "nanoid": "^5.1.6",
+    "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "next": "^14.2.0"
+    "react-icons": "^5.5.0",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -20,4 +29,3 @@
     "typescript": "^5"
   }
 }
-
